--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cpy": "^4.0.1",
     "css-loader": "^0.24.0",
     "del": "^2.2.2",
+    "es6-promise": "^4.1.0",
     "eslint": "^3.4.0",
     "eslint-config-airbnb": "^10.0.1",
     "eslint-plugin-import": "^1.14.0",
@@ -46,6 +47,7 @@
     "file-loader": "^0.9.0",
     "front-matter": "^2.1.0",
     "highlight.js": "^9.6.0",
+    "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.4",
     "markdown-it": "^7.0.1",
     "mkdirp": "^0.5.1",
@@ -66,6 +68,7 @@
     "postcss-selector-matches": "^2.0.1",
     "postcss-selector-not": "^2.0.0",
     "react-hot-loader": "^3.0.0-beta.2",
+    "redux-thunk": "^2.2.0",
     "style-loader": "^0.13.1",
     "stylelint": "^7.2.0",
     "stylelint-config-standard": "^13.0.0",
